# synapse-ai-context

./: .gitignore  README.md  README_KO.md  pyproject.toml  requirements.txt
.agent/: AI_RULES_EN.md  AI_RULES_KO.md
.github/workflows/: ci.yml
docs/: AGENT_BOOTSTRAP_EN.md  AGENT_BOOTSTRAP_KO.md  AI_RULES.md  AI_RULES_KO.md  CONTRIBUTING.md  MACOS_OPTIMIZATION.md  MANUAL_EN.md  MANUAL_KO.md  PERFORMANCE_TUNING.md  QUICK_START_KO.md  SYNAPSE_MANUAL_KO.md
scripts/: activate.bat  setup.bat  setup.ps1  setup.sh  setup_unified.sh
src/synapse/: __init__.py  analyzer.py  cli.py  compressor.py  context_manager.py  exceptions.py  file_tracker.py  graph.py  hybrid_search.py  logger.py  markdown_gen.py  parser.py  prompts.py  vector_store.py  watcher.py
src/synapse/structure/: __init__.py  pruner.py
src/synapse/templates/: AGENT_BOOTSTRAP_EN.md  AGENT_BOOTSTRAP_KO.md  AI_RULES_EN.md  AI_RULES_KO.md  MANUAL_EN.md  MANUAL_KO.md
tests/: test_analyzer.py  test_file_tracker.py  test_graph.py  test_parser.py  verify_changes.py
