[project]
name = "synapse-tool"
version = "0.1.0"
description = "AI Context Augmentation Tool for Large Scale Codebases"
requires-python = ">=3.10,<3.14"  # ChromaDB compatibility: Python 3.14+ not supported
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "tree-sitter>=0.20.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    "networkx>=3.2.1",
    "watchdog>=4.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0,<4.38.0",
    "numpy>=1.24.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "einops>=0.7.0",
    "accelerate>=0.26.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

[tool.hatch.build]
exclude = [
  "/tests",
  "/.vscode",
  "/.envrc",
  "/.gitignore",
  "/pyrightconfig.json"
]

[project.scripts]
synapse = "synapse.cli:app"
